# learn-bevy

./: Cargo.toml  README.md
assets/shaders/: custom_material.frag  custom_material.vert  custom_material.wgsl  lighting_material.wgsl
examples/: demo.rs
src/: application.rs  main.rs
