[package]
name = "learnWgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.18"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "44fa1bc2fa208fa92f80944253e0da56cb7ac1fe"}
winit = "0.20.0-alpha4"
glsl-to-spirv = "0.1"
cgmath = "0.17"
zerocopy = "0.2"
log = "0.4"
env_logger = "0.7"